[package]
name = "zokrates_field"
version = "0.5.2"
authors = ["Thibaut Schaeffer <thibaut@schaeff.fr>", "Guillaume Ballet <gballet@gmail.com>"]
edition = "2018"

[features]
default = ["bellman"]
bellman = ["bellman_ce"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
bincode = "0.8.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.8.0"
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1", default-features = false }

# bellman
bellman_ce = { version = "^0.3", default-features = false, optional = true }

# ark
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", features = ["curve"], default-features = false }
ark-bls12-377 = { version = "^0.3.0", features = ["curve"], default-features = false }
ark-bls12-381 = { version = "^0.3.0", features = ["curve"] }
ark-bw6-761 = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }

[dev-dependencies]
rand = "0.4"

[dependencies.num-bigint]
version = "0.2"
features = ["serde"]
