[package]
name = "zokrates_fs_resolver"
version = "0.5.0"
authors = ["Thibaut Schaeffer <thibaut@schaeff.fr>"]
repository = "https://github.com/JacobEberhardt/ZoKrates.git"
edition = "2018"

[dependencies]
zokrates_core = { version = "0.4.2", path = "../zokrates_core" }

[dev-dependencies]
tempfile = "3"