[package]
name = "zokrates_github_resolver"
version = "0.1.1"
authors = ["Evgenii P. <eupn@protonmail.com>", "schaeff <thibaut@schaeff.fr>"]
repository = "https://github.com/eupn/ZoKrates.git"
edition = "2018"

[features]
default = []

[dependencies]
reqwest = "0.9"
tempfile = "3"

[dev-dependencies]
mockito = "0.17"

[lib]