[package]
name = "zokrates_interpreter"
version = "0.1.1"
edition = "2021"

[features]
default = ["bellman", "ark"]
bellman = ["zokrates_field/bellman", "pairing_ce", "zokrates_embed/bellman", "zokrates_ast/bellman"]
ark = ["ark-bls12-377", "zokrates_embed/ark", "zokrates_ast/ark"]

[dependencies]
zokrates_field = { version = "0.5", path = "../zokrates_field", default-features = false }
zokrates_ast = { version = "0.1", path = "../zokrates_ast", default-features = false }
zokrates_embed = { version = "0.1.0", path = "../zokrates_embed", default-features = false }
zokrates_abi = { version = "0.1", path = "../zokrates_abi", default-features = false }

num = { version = "0.1.36", default-features = false }
num-bigint = { version = "0.2", default-features = false }

ark-bls12-377 = { version = "^0.3.0", features = ["curve"], default-features = false, optional = true }

pairing_ce = { version = "^0.21", optional = true }


serde = { version = "1.0", features = ["derive"] }

