[package]
name = "zokrates_js"
version = "1.0.28"
authors = ["Darko Macesic"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.1.4"
js-sys = "0.3.33"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.46", features = ["serde-serialize"] }
zokrates_core = { path = "../zokrates_core", features = ["wasm", "bellman"], default-features = false }
zokrates_common = { path = "../zokrates_common" }
zokrates_field = { path = "../zokrates_field", default-features = false, features = ["bellman"] }
zokrates_abi = { path = "../zokrates_abi" }
console_error_panic_hook = "0.1.5"