[package]
name = "zokrates_libsnark"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
zokrates_field = { version = "0.5", path = "../zokrates_field", default-features = false }
zokrates_ast = { version = "0.1", path = "../zokrates_ast", default-features = false }
zokrates_proof_systems = { version = "0.1", path = "../zokrates_proof_systems", default-features = false }
hex = "0.4.2"

[dev-dependencies]
zokrates_interpreter = { version = "0.1", path = "../zokrates_interpreter" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cmake = { version = "=0.1.45" }