[package]
name = "zokrates_mpc"
version = "0.1.0"
authors = ["dark64 <darem966@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"
rand = "0.4"
byteorder = "1"
crossbeam = "0.7.3"
blake2-rfc = "0.2"
bellman_ce = { version = "^0.3", default-features = false }
pairing_ce = { version = "^0.21" }
getrandom = { version = "0.2", features = ["js"] }