[package]
name = "zokrates_nova"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
zokrates_field = { version = "0.5", path = "../zokrates_field" }
zokrates_ast = { version = "0.1", path = "../zokrates_ast", default-features = false }
zokrates_core = { version = "0.7", path = "../zokrates_core", default-features = false, features = ["ark", "bellman"] }
zokrates_bellperson = { version = "0.1", path = "../zokrates_bellperson", default-features = false }
typed-arena = "1.4.1"
bellperson = { package = "bellperson", version = "^0.22", default-features = false, features = ["groth16"] }
rand_0_4 = { version = "0.4", package = "rand" }
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
hex = "0.4.2"
pairing = "0.22"
pasta_curves = { version = "0.4.0", features = ["repr-c"] }
nova-snark = { path = "../../nova" }
zokrates_interpreter = { version = "0.1", path = "../zokrates_interpreter" }