[package]
name = "zokrates_pest_ast"
version = "0.3.0"
authors = ["schaeff <thibaut@schaeff.fr>"]
edition = "2018"

[dependencies]
zokrates_parser = { version = "0.3.0", path = "../zokrates_parser" }
pest = "2.0"
pest-ast = "0.3.3"
from-pest = "0.3.1"
lazy_static = "1.3.0"

[dev-dependencies]
glob = "0.2"
