[package]
name = "zokrates_proof_systems"
version = "0.1.3"
edition = "2021"

[features]
full = ["solidity"]
solidity = ["zokrates_field/bn128", "ethabi", "primitive-types", "regex"]

[dependencies]
zokrates_ast = { version = "0.1", path = "../zokrates_ast" }
serde = { version = "1.0", features = ["derive"] }
zokrates_field = { version = "0.5.0", path = "../zokrates_field" }
hex = "0.4.2"
regex = { version = "0.2", optional = true }
cfg-if = "0.1"
ethabi = { version = "17.0.0", optional = true }
primitive-types = { version = "0.11", features = ["rlp"], optional = true }
rand_0_8 = { version = "0.8", package = "rand" }
blake2 = "0.8.1"
byteorder = "1"