[package]
name = "zokrates_solidity_test"
version = "0.1.1"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# Modeled after the testing pipeline of the Fe project: https://github.com/ethereum/fe/

[dependencies]
ethabi = "17.0.0"
primitive-types = { version = "0.11", features = ["rlp"] }
hex = { version = "0.4" }
bytes = { version = "1.1", default-features = false }
serde_json = { version = "1.0" }
rand = { version = "0.8" }

revm = { version = "1.6.0" }
solc = { git = "https://github.com/g-r-a-n-t/solc-rust", rev = "52d4146" }
