[package]
name = "zokrates_stdlib"
version = "0.1.5"
authors = ["Stefan Deml <stefandeml@gmail.com>", "schaeff <thibaut@schaeff.fr>"]
edition = "2018"

[dev-dependencies]
zokrates_test = { version = "0.1", path = "../zokrates_test" }

[build-dependencies]
fs_extra = "1.1.0"
zokrates_test = { version = "0.1", path = "../zokrates_test" }

