[package]
name = "zokrates_stdlib"
version = "0.3.2"
authors = ["Stefan Deml <stefandeml@gmail.com>", "schaeff <thibaut@schaeff.fr>"]
edition = "2018"

[dev-dependencies]
zokrates_test = { version = "0.2", path = "../zokrates_test" }

[build-dependencies]
fs_extra = "1.1.0"
zokrates_test_derive = { version = "0.0", path = "../zokrates_test_derive" }

